--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
 body {
   margin: 0;
   font-size: 1.5em;
   text-align: center;
   color: #fff;
-  background: #1b1523;
+  background: #22577E;
 }
