--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -21,14 +21,18 @@
     width: 250px;   
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1200px) {
     .back {
-        width: 250px;
+        width: 200px;
     }
 }
 
 @media (max-width: 600px) {
     .back {
-        width: 100px;
+        width: 80px;
+    }
+
+    .front {
+        width: 80px;
     }
 }
