--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,12 @@
 .card .front {
     transform: rotateY(90deg);
     position: absolute;
+    transition: all ease-in 0.2s;
 }
 
 .flipped .front {
     transform: rotateY(0deg);
+    transition-delay: 0.2s;
 }
 
 .front {
@@ -13,8 +15,16 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    transition: all 0.5s;
+}
+
+.card .back {
+    transition: all ease-in 0.2s;
+    transition-delay: 0.2s;
+}
+
+.flipped .back {
+    transform: rotateY(90deg);
+    transition-delay: 0s;
 }
 
 .back {
